// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. an svg, g, path 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight="100"
  bbWidth="100"
  meetOrSlice={0}
  minX={145}
  minY={50}
  style={
    Object {
      "backgroundColor": "transparent",
      "flex": 0,
      "height": 100,
      "width": 100,
    }
  }
  vbHeight={120}
  vbWidth={108}
  version="1.1"
>
  <RNSVGGroup
    fillOpacity={1}
    fillRule={0}
    matrix={
      Array [
        1,
        0,
        0,
        1,
        0,
        0,
      ]
    }
    opacity={1}
    originX={0}
    originY={0}
    propList={
      Array [
        "stroke",
        "strokeWidth",
        "fill",
        "fillRule",
      ]
    }
    rotation={0}
    scaleX={1}
    scaleY={1}
    skewX={0}
    skewY={0}
    strokeLinecap={0}
    strokeLinejoin={0}
    strokeMiterlimit={4}
    strokeOpacity={1}
    strokeWidth="1"
    x={0}
    y={0}
  >
    <RNSVGPath
      d="4872173116d82a1a379dbcc06ad3c243"
      fill={
        Array [
          0,
          0,
          0,
          0,
          1,
        ]
      }
      fillOpacity={1}
      fillRule={1}
      matrix={
        Array [
          1,
          0,
          0,
          1,
          0,
          0,
        ]
      }
      opacity={1}
      originX={0}
      originY={0}
      propList={
        Array [
          "fill",
        ]
      }
      rotation={0}
      scaleX={1}
      scaleY={1}
      skewX={0}
      skewY={0}
      strokeLinecap={0}
      strokeLinejoin={0}
      strokeMiterlimit={4}
      strokeOpacity={1}
      strokeWidth="1"
      x={0}
      y={0}
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`2. a path with no fill 1`] = `
<RNSVGPath
  d="4872173116d82a1a379dbcc06ad3c243"
  fillOpacity={1}
  fillRule={1}
  matrix={
    Array [
      1,
      0,
      0,
      1,
      0,
      0,
    ]
  }
  opacity={1}
  originX={0}
  originY={0}
  propList={
    Array [
      "fill",
    ]
  }
  rotation={0}
  scaleX={1}
  scaleY={1}
  skewX={0}
  skewY={0}
  strokeLinecap={0}
  strokeLinejoin={0}
  strokeMiterlimit={4}
  strokeOpacity={1}
  strokeWidth="1"
  x={0}
  y={0}
/>
`;

exports[`3. a polygon 1`] = `
<RNSVGPath
  d="f0010c2bbdef3c3bedb66db380f29ac6"
  fill={
    Array [
      0,
      0,
      0,
      1,
      1,
    ]
  }
  fillOpacity={1}
  fillRule={1}
  matrix={
    Array [
      1,
      0,
      0,
      1,
      0,
      0,
    ]
  }
  opacity={1}
  originX={0}
  originY={0}
  propList={
    Array [
      "stroke",
      "fill",
    ]
  }
  rotation={0}
  scaleX={1}
  scaleY={1}
  skewX={0}
  skewY={0}
  stroke={
    Array [
      0,
      1,
      0,
      0,
      1,
    ]
  }
  strokeLinecap={0}
  strokeLinejoin={0}
  strokeMiterlimit={4}
  strokeOpacity={1}
  strokeWidth="1"
  x={0}
  y={0}
/>
`;

exports[`4. a rect 1`] = `
<RNSVGRect
  fill={
    Array [
      0,
      0,
      0,
      0,
      1,
    ]
  }
  fillOpacity={0.4}
  fillRule={1}
  height="100"
  matrix={
    Array [
      1,
      0,
      0,
      1,
      0,
      0,
    ]
  }
  opacity={1}
  originX={0}
  originY={0}
  propList={
    Array [
      "stroke",
      "strokeWidth",
      "fill",
      "fillOpacity",
    ]
  }
  rotation={0}
  rx="0"
  ry="0"
  scaleX={1}
  scaleY={1}
  skewX={0}
  skewY={0}
  stroke={
    Array [
      0,
      1,
      1,
      1,
      1,
    ]
  }
  strokeLinecap={0}
  strokeLinejoin={0}
  strokeMiterlimit={4}
  strokeOpacity={1}
  strokeWidth="8"
  width="100"
  x="5"
  y="10"
/>
`;
